--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,5 +1,7 @@
 body {
-  font-family: verdana;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #2d284c;
+  color: aliceblue;
 }
 
 form {
@@ -9,4 +11,66 @@ form {
 
 form > * {
   margin: 0.5rem;
+}
+
+.tag {
+  color: white;
+}
+
+.logoWrapper {
+  display: flex;
+}
+
+.box {
+  font-weight: bold;
+  background-color: white;
+  color: rgb(39, 94, 234);
+  border-radius: 5px;
+  border-style: outset;
+  border-width: 5px;
+  z-index: 1;
+}
+
+.buster {
+  padding-left: 5px;
+  font-size: 22px;
+  font-weight: 100;
+  color: white;
+  z-index: 1;
+}
+
+.logo {
+  height: 100px;
+}
+
+
+.navigation {
+  display: flex;
+  flex-direction:row;
+  color: white;
+  position: relative;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+
+}
+
+.navigation:hover {
+  color: yellow;
+}
+
+
+.navigationWrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 40px;
+  background-color: #3050b1;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
+  color: white;
+  text-transform: uppercase;
+  overflow: hidden;
+  width: auto;
 }
