--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,8 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: #2d284c;
+  background-color: rgb(12, 45, 78);
   color: aliceblue;
+}
 
 a {
   color: whitesmoke;
@@ -15,6 +20,13 @@ img {
 nav {
   display: flex;
   justify-content: space-between;
+  background-color: rgba(255, 255, 255, 0.5);
+  font-family: 'Fjalla One';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+  
 }
 
 .navItem {
@@ -31,7 +43,6 @@ nav {
 
 .dropdown {
   position: absolute;
-
 }
 
 form {
@@ -74,7 +85,6 @@ form > * {
   height: 100px;
 }
 
-
 .navigation {
   display: flex;
   flex-direction:row;
@@ -84,13 +94,11 @@ form > * {
   align-items: center;
   text-decoration: none;
   transition: all 0.3s ease-in-out;
-
 }
 
 .navigation:hover {
   color: yellow;
 }
-
 
 .navigationWrapper {
   position: relative;
@@ -104,7 +112,8 @@ form > * {
   text-transform: uppercase;
   overflow: hidden;
   width: auto;
-=======
+}
+
 form > button {
   width: 100px;
 }
