--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,7 +3,6 @@
 }
 
 body {
-
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: rgb(12, 45, 78);
   color: aliceblue;
@@ -20,13 +19,17 @@ img {
 nav {
   display: flex;
   justify-content: space-between;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgb(143, 161, 173);
   font-family: 'Fjalla One';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-  
+  padding: 1rem;
+  /* position: fixed; */
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 .navItem {
