updated AllUsers to show some more information per user

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -38,6 +38,11 @@ nav {
   justify-content: center;
 }
 
+.allUsers {
+  display: flex;
+  align-items: center;
+}
+
 .avatar {
   border-radius: 50%;
   max-height: 50px;
