--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,6 +14,7 @@ a {
 
 img {
   max-height: 300px;
+  max-width: 90%;
 }
 
 nav {
@@ -155,6 +156,7 @@ form > button {
   align-items: center;
   justify-content: center;
   border: 2px solid whitesmoke;
-  width: calc(100% / 3);
+  width: calc((100% / 3) - .6rem) ;
+  margin: .3rem;
   border-radius: 1rem;
 }
