--- a/assets/styles.css
+++ b/assets/styles.css
@@ -59,7 +59,6 @@ nav {
 
 /* DO NOT REMOVE THIS down arrow! */
 .navItem>*:not(img) {
-  border: 1px solid orange;
   padding: 1rem 0 1rem 0;
 }
 /* up arrow */
@@ -174,23 +173,28 @@ form > button {
 }
 
 .productsCard {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
   border: 3px solid whitesmoke;
   width: calc((100% / 3) - 1rem) ;
   margin: .5rem;
-  padding: 0 1rem 1rem 1rem;
   border-radius: 1rem;
   text-align: center;
   background-color: rgba(110, 128, 141, 0.95);
   box-shadow: 1px 1px 10px black;
 }
 
-.productsCard>ul {
+.productsCard>div>ul {
   list-style-type:circle;
   text-align: left;
+}
+
+.productsCard>p {
+  margin: 0 1rem;
+}
+
+.priceAndTags {
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .readMore {
@@ -205,7 +209,7 @@ form > button {
 }
 
 .adminOptions> p {
-  margin-bottom: .2rem;
+  margin-bottom: .5rem;
   text-decoration: underline;
 }
 
@@ -217,8 +221,35 @@ form > button {
   align-items: center;
   justify-content: center;
   padding: .5rem;
+  margin-bottom: 1rem;
 }
 
-.adminOptions>div>* {
+.adminOptions>div>div {
   text-align: center;
+  padding: .5rem 0 0 1rem;
+}
+
+#productButtons {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  padding-left: 1rem;
+}
+
+#productButtons>* {
+  margin: 0.2rem;
+}
+
+#productButtons>*:not(#bookmarkIcon) {
+  max-height: 50px;
+  max-width: 50px;
+}
+
+#productButtons>#bookmarkIcon{
+  max-height: 75px;
+  max-width: 75px;
+  margin-top: 0;
 }
