metric ton of styling and formatting throughout

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -15,6 +15,20 @@ body {
   text-shadow: 1px 1px 5px black;
 }
 
+#headTitle {
+  text-align: center;
+  padding: 2rem;
+  font-size: 2.5rem;
+  margin: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 a {
   color: whitesmoke;
 }
@@ -106,11 +120,6 @@ nav {
   border: 1px solid rgb(143, 161, 173);
 }
 
-.allUsers {
-  display: flex;
-  align-items: center;
-}
-
 .avatar {
   border-radius: 50%;
   max-height: 35px;
@@ -120,16 +129,6 @@ nav {
 .homeLogo {
   width: 75px;
   height: 75px;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-form > * {
-  margin: 0.5rem;
-  width: 500px;
 }
 
 form > button {
@@ -145,9 +144,21 @@ form > button {
   display: flex;
 }
 
+.pagination>* {
+  padding: 1rem;
+  margin: .5rem;
+  font-size: 1rem;
+  color: rgb(12, 45, 78);
+  background-color: whitesmoke;
+  border: 2px solid rgb(12, 45, 78);
+  box-shadow: 1px 1px 5px black;
+}
+
 .pagination>.active {
-  background-color: rgb(25, 28, 30);
+  background-color: rgb(12, 45, 78);
+  border: 2px solid whitesmoke;
   color: whitesmoke;
+  box-shadow: 1px 1px 5px whitesmoke;
 }
 
 .productsPage {
@@ -159,11 +170,6 @@ form > button {
 
 .productBlocks>* {
   margin-bottom: 7rem;
-}
-
-.productBlocks>.productForm {
-  display: flex;
-  justify-content: center;
 }
 
 .productsContainer {
@@ -252,4 +258,286 @@ form > button {
   max-height: 75px;
   max-width: 75px;
   margin-top: 0;
+}
+
+.createProductForm>h2 {
+ text-align: center;
+}
+
+.createProductForm>form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+ }
+
+ .createProductForm>form>*:not(button) {
+  width: 500px;
+  margin: .5rem;
+ }
+
+/* Single Product */
+.mainPage {
+  border: 3px solid whitesmoke;
+  width: 80%;
+  margin: 2rem;
+  border-radius: 1rem;
+  text-align: center;
+  background-color: rgba(110, 128, 141, 0.95);
+  box-shadow: 1px 1px 10px black;
+  padding: 2rem;
+}
+
+#singleProductButtons {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 0;
+  padding-left: 1rem;
+}
+
+#singleProductButtons>* {
+  margin: 1rem;
+}
+
+#singleProductButtons>* {
+  max-height: 50px;
+  max-width: 50px;
+}
+
+.mainPage>div>ul {
+  list-style-type:circle;
+  text-align: left;
+}
+
+#backButton {
+  text-align: left;
+}
+
+.reviews, .reviewForm {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.reviewForm>* {
+  margin-bottom: 1rem;
+}
+
+.reviewForm>*:not(button, div) {
+  width: 500px;
+}
+
+/* tags */
+.tagsPage {
+  display: flex;
+  justify-content: flex-start;
+  margin: 0 5rem;
+}
+
+.tagsPage>h1{
+  text-align: center;
+}
+
+.tagsPage>div>ul>li {
+  margin: 1rem;
+  text-align: left;
+}
+
+.tagsPage>div>ul {
+  display: inline;
+}
+
+.tagDetails>ul>li {
+  padding: .5rem 0;
+}
+
+/* Cart */
+.cartPage>ul>li {
+  list-style: none;
+  inset-inline-start:unset;
+}
+
+.cartButtons, .cartLines {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cartButtons>img, .wishListButtons {
+  width: 50px;
+  height: 50px;
+}
+
+.cartButtons>*{
+  margin: 1rem;
+}
+
+/* User Profile */
+.identifiers {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 1rem;
+}
+
+.identifiers>img {
+  width: 50px;
+  height: 50px;
+}
+
+.userPage {
+  text-align: center;
+  padding: 0 2rem 5rem 2rem;
+}
+
+.userPage>ul>li {
+  list-style: none;
+  margin: 1rem;
+}
+
+/* WishList */
+.wishListPage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.wishListPage>ul {
+  list-style: circle;
+}
+
+.wishListButtons, .wishListDetails {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wishListButtons>img {
+  height: 50px;
+  width: 50px;
+}
+
+.wishListButtons>* {
+  margin: 1rem;
+}
+
+.wishListDetails>* {
+  margin: 2rem;
+}
+
+/* user orders */
+.ordersPage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+}
+
+.ordersPage>ul>li {
+  margin: 1rem;
+}
+
+.ordersPage>ul>li>ul>li {
+  margin: .5rem;
+}
+
+/* Settings Page */
+.settingsPage {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+}
+
+/* all users */
+.users, .allOrders {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.users>ul {
+  list-style: circle;
+}
+
+.allUsers {
+  display: flex;
+  align-items: center;
+}
+
+/* All Orders */
+.allOrders {
+  padding-bottom: 5rem;
+}
+
+/* all wishlists */
+.allWishLists>* {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+}
+
+.allWishLists>ul {
+  list-style: none;
+}
+
+.allWishLists>ul>li>ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: inline;
+}
+
+/* login and register */
+.login, .register {
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login>div>form, .register>div>form {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.login>div>form>*:not(button), .register>div>form>*:not(button) {
+  width: 300px;
+  margin: .5rem;
+}
+
+.github {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  padding: 1rem 0;
+  border-radius: 1rem;
+  box-shadow: 1px 1px 5px black;
+}
+
+.github>img {
+  max-height: 50px;
+}
+
+.github>* {
+  margin: 0 1rem;
+}
+
+.github:hover {
+  cursor: pointer;
 }
