added addresses to orders and updated appropriate routes front and backend

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -377,6 +377,15 @@ form > button {
   margin: 1rem;
 }
 
+.cartAddress {
+  padding: 1rem;
+  margin: 1rem;
+}
+
+.cartAddress>* {
+  margin: 1rem;
+}
+
 /* User Profile */
 .identifiers {
   display: flex;
