minor styling and singular error in display single product page

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -177,6 +177,8 @@ form > button {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  text-overflow: hidden;
 }
 
 .productsCard {
